--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
+    "concurrently": "^7.1.0",
     "gulp": "^4.0.2",
     "gulp-livereload": "^4.0.2",
     "gulp-pug": "^5.0.0",
@@ -14,9 +15,10 @@
     "typescript": "^4.6.3"
   },
   "scripts": {
-    "start": "gulp"
+    "start": "wait-on gulp build && gulp serve"
   },
   "dependencies": {
-    "gulp-server-livereload": "^1.9.2"
+    "gulp-server-livereload": "^1.9.2",
+    "wait-on": "^6.0.1"
   }
 }
