--- a/package.json
+++ b/package.json
@@ -9,16 +9,13 @@
     "gulp-livereload": "^4.0.2",
     "gulp-pug": "^5.0.0",
     "gulp-sass": "^5.1.0",
+    "gulp-server-livereload": "^1.9.2",
     "gulp-typescript": "^6.0.0-alpha.1",
     "pug": "^3.0.2",
     "sass": "^1.50.1",
     "typescript": "^4.6.3"
   },
   "scripts": {
-    "start": "wait-on gulp build && gulp serve"
-  },
-  "dependencies": {
-    "gulp-server-livereload": "^1.9.2",
-    "wait-on": "^6.0.1"
+    "start": "concurrently \"gulp serve\" && \"gulp\""
   }
 }
